week preceeding pct change calculation explanation added

--- a/data_exploration/Data Exploration_Category_1.ipynb
+++ b/data_exploration/Data Exploration_Category_1.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
        "4                1  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -714,13 +714,311 @@
        "4              1.0  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "after_data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Combine datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_df = b4_data.append(after_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### View dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ticker</th>\n",
+       "      <th>company</th>\n",
+       "      <th>earnings_flag</th>\n",
+       "      <th>earnings_ann_date</th>\n",
+       "      <th>ann_price_open</th>\n",
+       "      <th>ann_price_close</th>\n",
+       "      <th>week preceeding date</th>\n",
+       "      <th>week_price_open</th>\n",
+       "      <th>week_price_close</th>\n",
+       "      <th>pct_chng_t-7</th>\n",
+       "      <th>week_proceed_code</th>\n",
+       "      <th>day preceeding date</th>\n",
+       "      <th>day_b4_price_open</th>\n",
+       "      <th>day_b4_price_close</th>\n",
+       "      <th>1 trade day post</th>\n",
+       "      <th>day_after_price_open</th>\n",
+       "      <th>day_after_price_close</th>\n",
+       "      <th>close t+1 diff open t+1</th>\n",
+       "      <th>day_after_code</th>\n",
+       "      <th>pct_chng_t0</th>\n",
+       "      <th>pct_chng_t+1</th>\n",
+       "      <th>2 trade days post</th>\n",
+       "      <th>2_days_after_price_open</th>\n",
+       "      <th>2_days_after_price_close</th>\n",
+       "      <th>pct_chng_t+2</th>\n",
+       "      <th>category</th>\n",
+       "      <th>meets_threshold</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AAMC</td>\n",
+       "      <td>Altisource Asset Management Corp</td>\n",
+       "      <td>Before Market Open</td>\n",
+       "      <td>2020-11-05</td>\n",
+       "      <td>22.98</td>\n",
+       "      <td>22.98000</td>\n",
+       "      <td>2020-10-28</td>\n",
+       "      <td>22.290001</td>\n",
+       "      <td>23.000000</td>\n",
+       "      <td>-0.000870</td>\n",
+       "      <td>decrease</td>\n",
+       "      <td>2020-11-03</td>\n",
+       "      <td>24.00</td>\n",
+       "      <td>23.000000</td>\n",
+       "      <td>2020-11-05</td>\n",
+       "      <td>22.98</td>\n",
+       "      <td>22.98000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>no change</td>\n",
+       "      <td>-0.000870</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2020-11-06</td>\n",
+       "      <td>22.059999</td>\n",
+       "      <td>21.750000</td>\n",
+       "      <td>-0.056552</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AES</td>\n",
+       "      <td>AES Corp</td>\n",
+       "      <td>Before Market Open</td>\n",
+       "      <td>2020-11-06</td>\n",
+       "      <td>20.91</td>\n",
+       "      <td>20.41000</td>\n",
+       "      <td>2020-10-29</td>\n",
+       "      <td>19.320000</td>\n",
+       "      <td>19.530001</td>\n",
+       "      <td>0.045059</td>\n",
+       "      <td>increase</td>\n",
+       "      <td>2020-11-04</td>\n",
+       "      <td>20.26</td>\n",
+       "      <td>19.940001</td>\n",
+       "      <td>2020-11-06</td>\n",
+       "      <td>20.91</td>\n",
+       "      <td>20.41000</td>\n",
+       "      <td>-0.024498</td>\n",
+       "      <td>decrease</td>\n",
+       "      <td>0.046389</td>\n",
+       "      <td>-0.024498</td>\n",
+       "      <td>2020-11-09</td>\n",
+       "      <td>21.930000</td>\n",
+       "      <td>20.969999</td>\n",
+       "      <td>0.026705</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ALE</td>\n",
+       "      <td>ALLETE Inc</td>\n",
+       "      <td>Before Market Open</td>\n",
+       "      <td>2020-11-09</td>\n",
+       "      <td>55.66</td>\n",
+       "      <td>57.22398</td>\n",
+       "      <td>2020-10-30</td>\n",
+       "      <td>51.799999</td>\n",
+       "      <td>51.004200</td>\n",
+       "      <td>0.121946</td>\n",
+       "      <td>increase</td>\n",
+       "      <td>2020-11-05</td>\n",
+       "      <td>54.00</td>\n",
+       "      <td>53.426846</td>\n",
+       "      <td>2020-11-09</td>\n",
+       "      <td>55.66</td>\n",
+       "      <td>57.22398</td>\n",
+       "      <td>0.027331</td>\n",
+       "      <td>increase</td>\n",
+       "      <td>0.040121</td>\n",
+       "      <td>0.027331</td>\n",
+       "      <td>2020-11-10</td>\n",
+       "      <td>58.700001</td>\n",
+       "      <td>57.461300</td>\n",
+       "      <td>0.004130</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  ticker                           company       earnings_flag  \\\n",
+       "0   AAMC  Altisource Asset Management Corp  Before Market Open   \n",
+       "1    AES                          AES Corp  Before Market Open   \n",
+       "2    ALE                        ALLETE Inc  Before Market Open   \n",
+       "\n",
+       "  earnings_ann_date  ann_price_open  ann_price_close week preceeding date  \\\n",
+       "0        2020-11-05           22.98         22.98000           2020-10-28   \n",
+       "1        2020-11-06           20.91         20.41000           2020-10-29   \n",
+       "2        2020-11-09           55.66         57.22398           2020-10-30   \n",
+       "\n",
+       "   week_price_open  week_price_close  pct_chng_t-7 week_proceed_code  \\\n",
+       "0        22.290001         23.000000     -0.000870          decrease   \n",
+       "1        19.320000         19.530001      0.045059          increase   \n",
+       "2        51.799999         51.004200      0.121946          increase   \n",
+       "\n",
+       "  day preceeding date  day_b4_price_open  day_b4_price_close 1 trade day post  \\\n",
+       "0          2020-11-03              24.00           23.000000       2020-11-05   \n",
+       "1          2020-11-04              20.26           19.940001       2020-11-06   \n",
+       "2          2020-11-05              54.00           53.426846       2020-11-09   \n",
+       "\n",
+       "   day_after_price_open  day_after_price_close  close t+1 diff open t+1  \\\n",
+       "0                 22.98               22.98000                 0.000000   \n",
+       "1                 20.91               20.41000                -0.024498   \n",
+       "2                 55.66               57.22398                 0.027331   \n",
+       "\n",
+       "  day_after_code  pct_chng_t0  pct_chng_t+1 2 trade days post  \\\n",
+       "0      no change    -0.000870      0.000000        2020-11-06   \n",
+       "1       decrease     0.046389     -0.024498        2020-11-09   \n",
+       "2       increase     0.040121      0.027331        2020-11-10   \n",
+       "\n",
+       "   2_days_after_price_open  2_days_after_price_close  pct_chng_t+2  category  \\\n",
+       "0                22.059999                 21.750000     -0.056552       0.0   \n",
+       "1                21.930000                 20.969999      0.026705       2.0   \n",
+       "2                58.700001                 57.461300      0.004130       1.0   \n",
+       "\n",
+       "   meets_threshold  \n",
+       "0              0.0  \n",
+       "1              1.0  \n",
+       "2              1.0  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_df.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Calucation Explanations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Week Change:  pct_chng_t-7\n",
+    "<p> Calculations = (announcement day close price - week proceeding close price) / (week proceeding close price)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-0.0008695852173912415,\n",
+       " 0.04505883916586779,\n",
+       " 0.12194642740085965,\n",
+       " 0.09555349745371716,\n",
+       " -0.04430061639397249]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "week_prior_pct_change = list((full_df['ann_price_close'] - full_df['week_price_close'] )/full_df['week_price_close'])\n",
+    "week_prior_pct_change[:5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Verify the pct_chng_t-7 column matches the expected calulcations above"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stock Data: nan week data: nan\n",
+      "Stock Data: nan week data: nan\n",
+      "Stock Data: nan week data: nan\n",
+      "Stock Data: nan week data: nan\n",
+      "Stock Data: nan week data: nan\n",
+      "Stock Data: nan week data: nan\n",
+      "Stock Data: nan week data: nan\n"
+     ]
+    }
+   ],
+   "source": [
+    "stock_data = full_df['pct_chng_t-7'].tolist()\n",
+    "\n",
+    "for i in range(len(stock_data)):\n",
+    "    if stock_data[i] != week_prior_pct_change[i]:\n",
+    "        print(f'Stock Data: {stock_data[i]} week data: {week_prior_pct_change[i]}')"
    ]
   },
   {
@@ -1336,7 +1634,7 @@
     "### Filter data for:\n",
     "<ol>\n",
     "    <li> Meets pct change thershold is true </li>\n",
-    "    <li> Category 1:Increase in preceding week, increase in first trading day after announcement</li>"
+    "    <li> Category 1: Increase in Increase in preceding week, increase in first trading day after announcement</li>"
    ]
   },
   {
